Generates migrations for use with docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,22 +15,21 @@ services:
     ports:
       - "8000:80"     
     environment:
-      DB_CONNECTION_STRING: "host=postgres_image;port=5432;database=blogdb;username=bloguser;password=bloguser"
+      DB_CONNECTION_STRING: "host=postgres_image;port=5432;database=helloesdc;username=helloesdc;password=helloesdc"
     networks:
       - hello-esdc-dev  
   
   postgres_image:
     image: postgres:latest
     ports:
-      - "5432"
+      - "5432:5432"
     restart: always
     volumes:
-      - db_volume:/var/lib/postgresql/data
-      - ./database/seed.sql :/docker-entrypoint-initdb.d/seed.sql
+      - ./database/seed.sql:/docker-entrypoint-initdb.d/seed.sql
     environment:
-      POSTGRES_USER: "bloguser"
-      POSTGRES_PASSWORD: "bloguser"
-      POSTGRES_DB: "blogdb"
+      POSTGRES_USER: "helloesdc"
+      POSTGRES_PASSWORD: "helloesdc"
+      POSTGRES_DB: "helloesdc"
     networks:
       - hello-esdc-dev
 volumes:
