--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,8 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+- script: dotnet restore
+  displayName: 'Restore packages'
+
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
