run tests in az pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,3 +10,6 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- script: dotnet test
+  displayName: 'dotnet test'
