add docker build and push task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,3 +10,11 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- task: Docker@2
+  inputs:
+    containerRegistry: 'HelloESDCRegistry'
+    repository: 'hello-esdc-api'
+    command: 'buildAndPush'
+    Dockerfile: 'src/HelloESDC.API/Dockerfile'
+    buildContext: 'src/HelloESDC.API'
