--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@ trigger:
 
 pr:
   autoCancel: true # Cancels a PR build if a new commit comes in on the same branch
-  bracnhes:
+  branches:
     include:
       - '*'
 
