--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,14 +12,16 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 
 - task: Docker@2
+  displayName: Login to Container Registry
   inputs:
     containerRegistry: 'HelloESDCRegistry'
     command: 'login'
-    
+
 - task: Docker@2
+  displayName: Build and Push Container
   inputs:
     containerRegistry: 'HelloESDCRegistry'
-    repository: 'hello-esdc-api'
+    repository: 'HelloESDCRegistry/hello-esdc-api'
     command: 'buildAndPush'
     Dockerfile: 'src/HelloESDC.API/Dockerfile'
     buildContext: 'src/HelloESDC.API'
