--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,10 +12,15 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 
 - task: Docker@2
+  displayName: Login to Container Registry
+  inputs:
+    containerRegistry: 'HelloESDCRegistry'
+    command: 'login'
+- task: Docker@2
   displayName: Build and Push Container
   inputs:
     containerRegistry: 'HelloESDCRegistry'
-    repository: 'HelloESDCRegistry/hello-esdc-api'
+    repository: 'hello-esdc/hello-esdc-api'
     command: 'buildAndPush'
     Dockerfile: 'src/HelloESDC.API/Dockerfile'
     buildContext: 'src/HelloESDC.API'
