--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,7 @@ steps:
 - task: Docker@2
   displayName: Build and Push Container
   inputs:
+    azureSubscription: 'HelloESDCRegistry'
     containerRegistry: 'HelloESDCRegistry'
     repository: 'hello-esdc/hello-esdc-api'
     command: 'buildAndPush'
