--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,11 @@ steps:
   displayName: 'dotnet build $(buildConfiguration)'
 
 - task: Docker@2
+  displayName: Login to Container Registry
+  inputs:
+    containerRegistry: 'CDSDockerHub'
+    command: 'login'
+- task: Docker@2
   inputs:
     containerRegistry: 'CDSDockerHub'
     repository: 'cdssnc'
