--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,11 +14,10 @@ steps:
 - task: Docker@2
   displayName: Login to Container Registry
   inputs:
-    containerRegistry: 'CDSDockerHub'
-    command: 'login'
+    command: login
+    containerRegistry: CDSDockerHub
 - task: Docker@2
   inputs:
-    containerRegistry: 'CDSDockerHub'
-    repository: 'cdssnc'
-    command: 'buildAndPush'
-    Dockerfile: 'src/HelloESDC.API/Dockerfile'
+    command: buildAndPush
+    repository: cdssnc/hello-esdc-api
+    Dockerfile: src/HelloESDC.API/Dockerfile
