--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,6 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+
+- script: dotnet test
+  displayName: 'dotnet test'
