--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,5 +46,5 @@ jobs:
     inputs:
       command: buildAndPush
       repository: cdssnc/hello-esdc-api
-      tags: latest
+      tags: $(Build.SourceBranchName)
       Dockerfile: src/HelloESDC.API/Dockerfile
