--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,35 @@ services:
       DB_CONNECTION_STRING: "host=postgres;port=5432;database=helloesdc;username=helloesdc;password=helloesdc"
     networks:
       - hello-esdc-dev  
-  
-  web:
+
+  client:
     image: hello-esdc-vue:latest
     depends_on:
       - "hello-esdc-api"
     build:
       context: ./src/Web/WebSPA/spa-vue
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.development
     ports:
-      - "8080:80"
+      - "3000:3000"
     volumes:
-      - ./src/Web/WebSPA/spa-vue
+      - ./src/Web/WebSPA/spa-vue:/app
+      - /app/node_modules
+    environment:
+      - PORT=3000
+      - NODE_ENV=development
+    networks:
+      - hello-esdc-dev
+
+  web:
+    image: nginx:alpine
+    depends_on:
+      - "client"
+      - "hello-esdc-api"
+    command: [nginx-debug, '-g', 'daemon off;']
+    ports:
+      - '80:80'
+    volumes:
+      - ./http/nginx.conf:/etc/nginx/nginx.conf:ro
     networks:
       - hello-esdc-dev
 
