ignore some more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -409,3 +409,12 @@ ASALocalRun/
 
 **/.terraform/*
 *.tfvars
+
+.kube
+.helm
+
+/infrastructure/.terraform
+/infrastructure/*.lock.info
+/infrastructure/terraform.tfstate*
+/infrastructure/terraform.tfvars
+/app.values.yaml
